print layers and select debug correctly.

--- a/e07_basic_raytracing.ipynb
+++ b/e07_basic_raytracing.ipynb
@@ -20,8 +20,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[INFO] Initial available layers: ['VK_LAYER_NV_optimus', 'VK_LAYER_NV_nomad_release_public_2019_3_0', 'VK_LAYER_OBS_HOOK', 'VK_LAYER_NV_nomad_release_public_2021_5_1', 'VK_LAYER_NV_GPU_Trace_release_public_2021_5_1', 'VK_LAYER_LUNARG_api_dump', 'VK_LAYER_LUNARG_gfxreconstruct', 'VK_LAYER_KHRONOS_synchronization2', 'VK_LAYER_KHRONOS_validation', 'VK_LAYER_LUNARG_monitor', 'VK_LAYER_LUNARG_screenshot', 'VK_LAYER_KHRONOS_profiles', 'VK_LAYER_KHRONOS_shader_object']\n",
       "[INFO] Vulkan Instance created...\n",
       "[INFO] Debug instance created...\n",
+      "[INFO] Supported features {'coop_mat': True, 'rt': 1, 'rq': True, 'atomic': 1}\n",
       "[INFO] Available devices: 1\n",
       "[INFO] Selected device: NVIDIA GeForce RTX 2080 Ti\n",
       "\n",
@@ -84,8 +86,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-22T20:36:56.574311900Z",
-     "start_time": "2024-07-22T20:36:52.155189400Z"
+     "end_time": "2024-07-28T10:46:59.594941800Z",
+     "start_time": "2024-07-28T10:46:53.624525600Z"
     }
    },
    "id": "6471a59ec6d07748"
@@ -128,8 +130,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-22T20:36:56.594215800Z",
-     "start_time": "2024-07-22T20:36:56.578315400Z"
+     "end_time": "2024-07-28T10:46:59.633436900Z",
+     "start_time": "2024-07-28T10:46:59.611939700Z"
     }
    },
    "id": "5b6480a0549c57eb"
@@ -155,8 +157,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-22T20:36:56.613805400Z",
-     "start_time": "2024-07-22T20:36:56.595217400Z"
+     "end_time": "2024-07-28T10:46:59.635436300Z",
+     "start_time": "2024-07-28T10:46:59.633436900Z"
     }
    },
    "id": "89b4218e482994f4"
@@ -240,8 +242,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-22T20:36:56.614804800Z",
-     "start_time": "2024-07-22T20:36:56.605118900Z"
+     "end_time": "2024-07-28T10:46:59.646888700Z",
+     "start_time": "2024-07-28T10:46:59.639890700Z"
     }
    },
    "id": "afbcf9eba89bc15e"
@@ -281,8 +283,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-22T20:36:57.173920400Z",
-     "start_time": "2024-07-22T20:36:56.611807Z"
+     "end_time": "2024-07-28T10:47:00.569145500Z",
+     "start_time": "2024-07-28T10:46:59.643890Z"
     }
    },
    "id": "2d182fd1f4cbdd9"
@@ -301,8 +303,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-22T20:36:57.173920400Z",
-     "start_time": "2024-07-22T20:36:57.171919300Z"
+     "end_time": "2024-07-28T10:47:00.578299200Z",
+     "start_time": "2024-07-28T10:47:00.571145200Z"
     }
    },
    "id": "7810b759ab64f79b"
@@ -324,8 +326,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-22T20:36:57.173920400Z",
-     "start_time": "2024-07-22T20:36:57.171919300Z"
+     "end_time": "2024-07-28T10:47:00.589287Z",
+     "start_time": "2024-07-28T10:47:00.578299200Z"
     }
    },
    "id": "90788502f5b21da2"
@@ -343,8 +345,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-22T20:36:57.180921Z",
-     "start_time": "2024-07-22T20:36:57.171919300Z"
+     "end_time": "2024-07-28T10:47:00.613480300Z",
+     "start_time": "2024-07-28T10:47:00.590286800Z"
     }
    },
    "id": "bf4b68dd9463d62d"
@@ -375,8 +377,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-22T20:36:58.213187100Z",
-     "start_time": "2024-07-22T20:36:57.180921Z"
+     "end_time": "2024-07-28T10:47:03.083537800Z",
+     "start_time": "2024-07-28T10:47:00.614483200Z"
     }
    },
    "id": "371e61f48ed12a4c"
