--- a/e01_create_and_destroy_device.ipynb
+++ b/e01_create_and_destroy_device.ipynb
@@ -26,8 +26,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-24T20:33:24.258546400Z",
-     "start_time": "2024-07-24T20:33:22.164309400Z"
+     "end_time": "2024-07-26T19:31:58.874183800Z",
+     "start_time": "2024-07-26T19:31:55.615594300Z"
     }
    },
    "id": "62c771f637121d64"
@@ -63,8 +63,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-22T20:33:21.331929900Z",
-     "start_time": "2024-07-22T20:33:21.320940800Z"
+     "end_time": "2024-07-26T19:31:59.218688300Z",
+     "start_time": "2024-07-26T19:31:58.876184900Z"
     }
    },
    "id": "1209b4f0bb295e0"
@@ -146,8 +146,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-22T20:33:21.361658100Z",
-     "start_time": "2024-07-22T20:33:21.328932400Z"
+     "end_time": "2024-07-26T19:31:59.238050700Z",
+     "start_time": "2024-07-26T19:31:59.219688400Z"
     }
    },
    "id": "3da100f36dce6da4"
@@ -230,8 +230,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-22T20:33:21.363658600Z",
-     "start_time": "2024-07-22T20:33:21.344879700Z"
+     "end_time": "2024-07-26T19:31:59.278595400Z",
+     "start_time": "2024-07-26T19:31:59.239051600Z"
     }
    },
    "id": "9f74c359d7098f54"
@@ -256,6 +256,7 @@
      "text": [
       "[INFO] Vulkan Instance created...\n",
       "[INFO] Debug instance created...\n",
+      "[INFO] Supported features {'coop_mat': True, 'rt': 1, 'rq': True, 'atomic': 1}\n",
       "[INFO] Available devices: 1\n",
       "[INFO] Selected device: NVIDIA GeForce RTX 2080 Ti\n",
       "\n",
@@ -296,7 +297,7 @@
     },
     {
      "data": {
-      "text/plain": "<vulky._rendering_internal.DeviceManager at 0x20b6f3b0710>"
+      "text/plain": "<vulky._rendering_internal.DeviceManager at 0x19c6e3f2650>"
      },
      "execution_count": 5,
      "metadata": {},
@@ -309,8 +310,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-22T20:33:22.294137500Z",
-     "start_time": "2024-07-22T20:33:21.364658Z"
+     "end_time": "2024-07-26T19:32:00.866435100Z",
+     "start_time": "2024-07-26T19:31:59.266595Z"
     }
    },
    "id": "3ada4dddfdd5739d"
@@ -345,8 +346,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-22T20:33:22.398256300Z",
-     "start_time": "2024-07-22T20:33:22.295138900Z"
+     "end_time": "2024-07-26T19:32:01.875924200Z",
+     "start_time": "2024-07-26T19:32:00.867434600Z"
     }
    },
    "id": "51570ac9f30ddd79"
@@ -380,8 +381,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-22T20:33:22.812913Z",
-     "start_time": "2024-07-22T20:33:22.395259300Z"
+     "end_time": "2024-07-26T19:32:02.564273400Z",
+     "start_time": "2024-07-26T19:32:01.874924100Z"
     }
    },
    "id": "1f66b76d5879cf59"
