print layers and select debug correctly.

--- a/e05_obj_viewer.ipynb
+++ b/e05_obj_viewer.ipynb
@@ -14,8 +14,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] Initial available layers: ['VK_LAYER_NV_optimus', 'VK_LAYER_NV_nomad_release_public_2019_3_0', 'VK_LAYER_OBS_HOOK', 'VK_LAYER_NV_nomad_release_public_2021_5_1', 'VK_LAYER_NV_GPU_Trace_release_public_2021_5_1', 'VK_LAYER_LUNARG_api_dump', 'VK_LAYER_LUNARG_gfxreconstruct', 'VK_LAYER_KHRONOS_synchronization2', 'VK_LAYER_KHRONOS_validation', 'VK_LAYER_LUNARG_monitor', 'VK_LAYER_LUNARG_screenshot', 'VK_LAYER_KHRONOS_profiles', 'VK_LAYER_KHRONOS_shader_object']\n",
+      "[INFO] Vulkan Instance created...\n",
+      "[INFO] Debug instance created...\n",
+      "[INFO] Supported features {'coop_mat': True, 'rt': 1, 'rq': True, 'atomic': 1}\n",
+      "[INFO] Available devices: 1\n",
+      "[INFO] Selected device: NVIDIA GeForce RTX 2080 Ti\n",
+      "\n",
+      "[INFO] Selected device index: 0\n",
+      "\n",
+      "[INFO] 5 available queue family\n",
+      "[PRINT] Inserted device layer \"VK_LAYER_KHRONOS_validation\" (C:\\VulkanSDK\\1.3.275.0\\Bin\\.\\VkLayer_khronos_validation.dll)\n",
+      "[PRINT] Inserted device layer \"VK_LAYER_OBS_HOOK\" (C:\\ProgramData\\obs-studio-hook\\.\\graphics-hook64.dll)\n",
+      "[PRINT] Inserted device layer \"VK_LAYER_NV_optimus\" (C:\\WINDOWS\\System32\\DriverStore\\FileRepository\\nv_dispi.inf_amd64_cc569e59ca39c5fe\\.\\nvoglv64.dll)\n",
+      "[PRINT] vkCreateDevice layer callstack setup to:\n",
+      "[PRINT]    <Application>\n",
+      "[PRINT]      ||\n",
+      "[PRINT]    <Loader>\n",
+      "[PRINT]      ||\n",
+      "[PRINT]    VK_LAYER_NV_optimus\n",
+      "[PRINT]            Type: Implicit\n",
+      "[PRINT]                Disable Env Var:  DISABLE_LAYER_NV_OPTIMUS_1\n",
+      "[PRINT]            Manifest: C:\\WINDOWS\\System32\\DriverStore\\FileRepository\\nv_dispi.inf_amd64_cc569e59ca39c5fe\\nv-vk64.json\n",
+      "[PRINT]            Library:  C:\\WINDOWS\\System32\\DriverStore\\FileRepository\\nv_dispi.inf_amd64_cc569e59ca39c5fe\\.\\nvoglv64.dll\n",
+      "[PRINT]      ||\n",
+      "[PRINT]    VK_LAYER_OBS_HOOK\n",
+      "[PRINT]            Type: Implicit\n",
+      "[PRINT]                Disable Env Var:  DISABLE_VULKAN_OBS_CAPTURE\n",
+      "[PRINT]            Manifest: C:\\ProgramData\\obs-studio-hook\\obs-vulkan64.json\n",
+      "[PRINT]            Library:  C:\\ProgramData\\obs-studio-hook\\.\\graphics-hook64.dll\n",
+      "[PRINT]      ||\n",
+      "[PRINT]    VK_LAYER_KHRONOS_validation\n",
+      "[PRINT]            Type: Explicit\n",
+      "[PRINT]            Manifest: C:\\VulkanSDK\\1.3.275.0\\Bin\\VkLayer_khronos_validation.json\n",
+      "[PRINT]            Library:  C:\\VulkanSDK\\1.3.275.0\\Bin\\.\\VkLayer_khronos_validation.dll\n",
+      "[PRINT]      ||\n",
+      "[PRINT]    <Device>\n",
+      "[PRINT]        Using \"NVIDIA GeForce RTX 2080 Ti\" with driver: \"C:\\WINDOWS\\System32\\DriverStore\\FileRepository\\nv_dispi.inf_amd64_cc569e59ca39c5fe\\.\\nvoglv64.dll\"\n",
+      "[INFO] Device and queues created...\n",
+      "[INFO] Creating page with 1024MB on CPU\n",
+      "[INFO] Creating page with 1024MB on GPU\n"
+     ]
+    }
+   ],
    "source": [
     "import vulky as vk\n",
     "import numpy as np\n",
@@ -34,19 +81,40 @@
     ")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-30T12:32:50.930149100Z",
+     "start_time": "2024-07-30T12:32:46.652914200Z"
+    }
    },
    "id": "6b0aac64eba93bfc"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: './data/bunny.obj'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[2], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m data \u001B[38;5;241m=\u001B[39m \u001B[43mvk\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mload_obj\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43m./data/bunny.obj\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32mD:\\rendervous.project\\vulky\\_io.py:132\u001B[0m, in \u001B[0;36mload_obj\u001B[1;34m(path)\u001B[0m\n\u001B[0;32m    128\u001B[0m         add_triplets(t1, t2, t3)\n\u001B[0;32m    130\u001B[0m obj_directory \u001B[38;5;241m=\u001B[39m os\u001B[38;5;241m.\u001B[39mpath\u001B[38;5;241m.\u001B[39mdirname(path)\n\u001B[1;32m--> 132\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28;43mopen\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mpath\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mmode\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mr\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m \u001B[38;5;28;01mas\u001B[39;00m f:\n\u001B[0;32m    133\u001B[0m     \u001B[38;5;28;01mwhile\u001B[39;00m \u001B[38;5;28;01mTrue\u001B[39;00m:\n\u001B[0;32m    134\u001B[0m         line \u001B[38;5;241m=\u001B[39m f\u001B[38;5;241m.\u001B[39mreadline()\n",
+      "\u001B[1;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: './data/bunny.obj'"
+     ]
+    }
+   ],
    "source": [
-    "data = vk.load_obj('./data/bunny.obj')"
+    "data = vk.load_obj('./vulky_data/bunny.obj')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-30T12:32:51.301708500Z",
+     "start_time": "2024-07-30T12:32:50.932148900Z"
+    }
    },
    "id": "5d90346b2720b5a2"
   },
@@ -58,7 +126,11 @@
     "vertices, indices = vk.create_mesh(data, mode='po')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-30T12:32:51.308709600Z",
+     "start_time": "2024-07-30T12:32:51.305710700Z"
+    }
    },
    "id": "4fcec3a16e60de7e"
   },
@@ -77,7 +149,10 @@
     "index_buffer = vk.index_buffer(number_of_indices).load(indices)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-07-30T12:32:51.307710900Z"
+    }
    },
    "id": "bb6dfce3d7b6d6ff"
   },
@@ -114,7 +189,10 @@
     "        t.World = vk.mat4.trs(vk.vec3(np.cos(i * 6.28 / 3), -0.2, np.sin(i * 6.28 / 3)), vk.vec3(0., 1., 0.0), i*3.14159/3, vk.vec3.one())"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-07-30T12:32:51.309710700Z"
+    }
    },
    "id": "2af85fc4376054b2"
   },
@@ -168,7 +246,10 @@
     "\"\"\""
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-07-30T12:32:51.311709700Z"
+    }
    },
    "id": "644317e58919b0b4"
   },
@@ -199,7 +280,10 @@
     "pipeline.close()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-07-30T12:32:51.313710100Z"
+    }
    },
    "id": "4505008646a31310"
   },
@@ -224,7 +308,10 @@
     ")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-07-30T12:32:51.316709800Z"
+    }
    },
    "id": "35814d7d70b66ca8"
   },
@@ -244,7 +331,10 @@
     "man.bind(global_bindings[0])"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-07-30T12:32:51.318710300Z"
+    }
    },
    "id": "475beaa6db2e8a0"
   },
@@ -257,7 +347,10 @@
     "man.bind_index_buffer(index_buffer)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-07-30T12:32:51.319710100Z"
+    }
    },
    "id": "ca282b5fd505974a"
   },
@@ -272,7 +365,10 @@
     "man.freeze()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-07-30T12:32:51.321710400Z"
+    }
    },
    "id": "19d25019d190f5f3"
   },
@@ -284,7 +380,10 @@
     "vk.submit(man)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-07-30T12:32:51.322709400Z"
+    }
    },
    "id": "77f5a29d82a92d9a"
   },
@@ -306,7 +405,10 @@
     "plt.show()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-07-30T12:32:51.324710300Z"
+    }
    },
    "id": "2eeb6d7362f12c08"
   },
@@ -346,7 +448,10 @@
     "vk.save_video(video_data, 'teaser5.webp', 10)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-07-30T12:32:51.325709600Z"
+    }
    },
    "id": "37eda689d29e56df"
   },
@@ -359,7 +464,10 @@
     "moviepy.editor.ipython_display(\"teaser5.webp\", filetype='image')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-07-30T12:32:51.327710400Z"
+    }
    },
    "id": "9ae156aa1dfee110"
   }
