print layers and select debug correctly.

--- a/e05_obj_viewer.ipynb
+++ b/e05_obj_viewer.ipynb
@@ -83,8 +83,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-30T12:32:50.930149100Z",
-     "start_time": "2024-07-30T12:32:46.652914200Z"
+     "end_time": "2024-07-30T13:06:50.061703600Z",
+     "start_time": "2024-07-30T13:06:45.707528100Z"
     }
    },
    "id": "6b0aac64eba93bfc"
@@ -95,14 +95,14 @@
    "outputs": [
     {
      "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: './data/bunny.obj'",
+     "evalue": "[Errno 2] No such file or directory: './vulky_data/bunny.obj'",
      "output_type": "error",
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[2], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m data \u001B[38;5;241m=\u001B[39m \u001B[43mvk\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mload_obj\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43m./data/bunny.obj\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[1;32mIn[2], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m data \u001B[38;5;241m=\u001B[39m \u001B[43mvk\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mload_obj\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43m./vulky_data/bunny.obj\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n",
       "File \u001B[1;32mD:\\rendervous.project\\vulky\\_io.py:132\u001B[0m, in \u001B[0;36mload_obj\u001B[1;34m(path)\u001B[0m\n\u001B[0;32m    128\u001B[0m         add_triplets(t1, t2, t3)\n\u001B[0;32m    130\u001B[0m obj_directory \u001B[38;5;241m=\u001B[39m os\u001B[38;5;241m.\u001B[39mpath\u001B[38;5;241m.\u001B[39mdirname(path)\n\u001B[1;32m--> 132\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28;43mopen\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mpath\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mmode\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mr\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m \u001B[38;5;28;01mas\u001B[39;00m f:\n\u001B[0;32m    133\u001B[0m     \u001B[38;5;28;01mwhile\u001B[39;00m \u001B[38;5;28;01mTrue\u001B[39;00m:\n\u001B[0;32m    134\u001B[0m         line \u001B[38;5;241m=\u001B[39m f\u001B[38;5;241m.\u001B[39mreadline()\n",
-      "\u001B[1;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: './data/bunny.obj'"
+      "\u001B[1;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: './vulky_data/bunny.obj'"
      ]
     }
    ],
@@ -112,8 +112,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-30T12:32:51.301708500Z",
-     "start_time": "2024-07-30T12:32:50.932148900Z"
+     "end_time": "2024-07-30T13:06:50.424342200Z",
+     "start_time": "2024-07-30T13:06:50.063704700Z"
     }
    },
    "id": "5d90346b2720b5a2"
@@ -128,8 +128,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-30T12:32:51.308709600Z",
-     "start_time": "2024-07-30T12:32:51.305710700Z"
+     "end_time": "2024-07-30T13:06:50.430343300Z",
+     "start_time": "2024-07-30T13:06:50.425341900Z"
     }
    },
    "id": "4fcec3a16e60de7e"
@@ -151,7 +151,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-07-30T12:32:51.307710900Z"
+     "start_time": "2024-07-30T13:06:50.427343800Z"
     }
    },
    "id": "bb6dfce3d7b6d6ff"
@@ -191,7 +191,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-07-30T12:32:51.309710700Z"
+     "start_time": "2024-07-30T13:06:50.429344Z"
     }
    },
    "id": "2af85fc4376054b2"
@@ -248,7 +248,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-07-30T12:32:51.311709700Z"
+     "start_time": "2024-07-30T13:06:50.431344Z"
     }
    },
    "id": "644317e58919b0b4"
@@ -282,7 +282,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-07-30T12:32:51.313710100Z"
+     "start_time": "2024-07-30T13:06:50.433342500Z"
     }
    },
    "id": "4505008646a31310"
@@ -310,7 +310,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-07-30T12:32:51.316709800Z"
+     "start_time": "2024-07-30T13:06:50.435344400Z"
     }
    },
    "id": "35814d7d70b66ca8"
@@ -333,7 +333,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-07-30T12:32:51.318710300Z"
+     "start_time": "2024-07-30T13:06:50.437343800Z"
     }
    },
    "id": "475beaa6db2e8a0"
@@ -349,7 +349,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-07-30T12:32:51.319710100Z"
+     "start_time": "2024-07-30T13:06:50.439343900Z"
     }
    },
    "id": "ca282b5fd505974a"
@@ -367,7 +367,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-07-30T12:32:51.321710400Z"
+     "start_time": "2024-07-30T13:06:50.441343200Z"
     }
    },
    "id": "19d25019d190f5f3"
@@ -382,7 +382,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-07-30T12:32:51.322709400Z"
+     "start_time": "2024-07-30T13:06:50.442343500Z"
     }
    },
    "id": "77f5a29d82a92d9a"
@@ -407,7 +407,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-07-30T12:32:51.324710300Z"
+     "start_time": "2024-07-30T13:06:50.444343300Z"
     }
    },
    "id": "2eeb6d7362f12c08"
@@ -450,7 +450,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-07-30T12:32:51.325709600Z"
+     "start_time": "2024-07-30T13:06:50.445342300Z"
     }
    },
    "id": "37eda689d29e56df"
@@ -466,7 +466,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-07-30T12:32:51.327710400Z"
+     "start_time": "2024-07-30T13:06:50.447344100Z"
     }
    },
    "id": "9ae156aa1dfee110"
