remove working with color optimal layout to avoid necessary image layout transitions and allow pipelines and framebuffers more reusable. Saving videos with highest quality.

--- a/e01_create_and_destroy_device.ipynb
+++ b/e01_create_and_destroy_device.ipynb
@@ -162,7 +162,7 @@
    "source": [
     "a = vk.vec3.rand()  # U[0..1)\n",
     "b = vk.vec3.randn()  # N(0, I)\n",
-    "c = vk.vec3.randd(100)  # Uniform in hypersphere"
+    "c = vk.vec3.randd(1000)  # Uniform in hypersphere"
    ],
    "metadata": {
     "collapsed": false
@@ -175,9 +175,12 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "fig = plt.figure()\n",
+    "fig = plt.figure(figsize=(3,3), dpi=200)\n",
     "ax = fig.add_subplot(projection='3d')\n",
     "ax.scatter(c.x, c.y, c.z)\n",
+    "ax.axis('off')\n",
+    "ax.set_box_aspect((1,1,1))\n",
+    "fig.tight_layout(pad=0.0)\n",
     "fig.savefig('teaser1.jpg')\n",
     "plt.show()"
    ],
@@ -208,6 +211,16 @@
     "collapsed": false
    },
    "id": "1f66b76d5879cf59"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "In the rest of the notebooks we won't close explicitly the device, although it is automatically performed at exit, it is unpleasant when we want to repeat cell executions and the device is already destroyed."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4e6e0a7779680dc7"
   }
  ],
  "metadata": {
