--- a/e02_basic_compute.ipynb
+++ b/e02_basic_compute.ipynb
@@ -353,9 +353,7 @@
     "    # re-submit commands to gpu\n",
     "    vk.submit(man)  # by default will wait until finishes\n",
     "    render_target.save(staging)\n",
-    "    video_data[i] = staging[...,:3]  # copy current frame to video (only RGB)\n",
-    "    \n",
-    "vk.save_video(video_data, 'teaser2.webp', 10)"
+    "    video_data[i] = staging[...,:3]  # copy current frame to video (only RGB)"
    ],
    "metadata": {
     "collapsed": false
@@ -367,6 +365,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "vk.save_video(video_data, 'teaser2.webp', 10, quality=100)\n",
     "import moviepy.editor\n",
     "moviepy.editor.ipython_display(\"teaser2.webp\", filetype='image')"
    ],
