--- a/e03_basic_rasterization.ipynb
+++ b/e03_basic_rasterization.ipynb
@@ -316,29 +316,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The render target object starts its layout as render target, we will declare that with the use. This is not effective in the command buffer, but it starts a track of the state for that resource for the purpose of barrier and layout transitioning."
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "bd6e6aeafe196609"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "man.use(render_target, vk.ImageUsage.RENDER_TARGET)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "ca67743c97569bbe"
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Now, we can clear the render target with dark blue. To do so, let's transition to a general layout (specifying use ANY), then clear the color, then, set back to the layout optimal for render target (use RENDER_TARGET). Depth-stencil images dont need to transition because it will be done internally."
+    "Now, we can clear the render target with dark blue. Images don't need to transition because it will be done internally when necessary. Anyway, image barriers are supported but only to synchronize between two parts of the command buffer."
    ],
    "metadata": {
     "collapsed": false
@@ -350,10 +328,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "man.image_barrier(render_target, vk.ImageUsage.ANY)\n",
     "man.clear_color(render_target, (0.0, 0.0, 0.4, 1.0))\n",
-    "man.image_barrier(render_target, vk.ImageUsage.RENDER_TARGET)\n",
-    "\n",
     "man.clear_depth_stencil(depth_buffer, 1.0, 0)"
    ],
    "metadata": {
@@ -467,9 +442,6 @@
    "outputs": [],
    "source": [
     "staging = vk.tensor(render_target.height, render_target.width, 4) \n",
-    "with vk.graphics_manager() as b:\n",
-    "    b.use(render_target, vk.ImageUsage.RENDER_TARGET)\n",
-    "    b.image_barrier(render_target, vk.ImageUsage.ANY)\n",
     "render_target.save(staging)"
    ],
    "metadata": {
@@ -511,8 +483,18 @@
     "video_data = vk.tensor(100, SCREEN_HEIGHT, SCREEN_WIDTH, 3)  # 100 frames\n",
     "initial_offset = torch.rand(NUMBER_OF_SPRITES, 3)*2 - 1.0\n",
     "initial_offset[..., 2] *= 0.5\n",
-    "initial_offset[..., 2] += 0.5\n",
-    "\n",
+    "initial_offset[..., 2] += 0.5"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7b934b229060ed29"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "for i in range(len(video_data)):\n",
     "    alpha = i / len(video_data)\n",
     "    # update buffer\n",
@@ -530,9 +512,7 @@
     "        b.use(render_target, vk.ImageUsage.RENDER_TARGET)\n",
     "        b.image_barrier(render_target, vk.ImageUsage.ANY)\n",
     "    render_target.save(staging)\n",
-    "    video_data[i] = staging[...,:3]  # copy current frame to video (only RGB)\n",
-    "    \n",
-    "vk.save_video(video_data, 'teaser3.webp', 10)"
+    "    video_data[i] = staging[...,:3]  # copy current frame to video (only RGB)    "
    ],
    "metadata": {
     "collapsed": false
@@ -544,6 +524,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "vk.save_video(video_data, 'teaser3.webp', 10, quality=100)\n",
     "import moviepy.editor\n",
     "moviepy.editor.ipython_display(\"teaser3.webp\", filetype='image')"
    ],
