--- a/e06_texture_mapping.ipynb
+++ b/e06_texture_mapping.ipynb
@@ -20,8 +20,8 @@
     "import vulky as vk\n",
     "import torch\n",
     "vk.create_device(debug=True)\n",
-    "SCREEN_WIDTH = 2048\n",
-    "SCREEN_HEIGHT = 2048\n",
+    "SCREEN_WIDTH = 512\n",
+    "SCREEN_HEIGHT = 512\n",
     "render_target = vk.render_target(\n",
     "    image_format=vk.Format.VEC4,\n",
     "    width=SCREEN_WIDTH,\n",
@@ -228,11 +228,7 @@
    "outputs": [],
    "source": [
     "man = vk.graphics_manager()\n",
-    "man.use(render_target, vk.ImageUsage.RENDER_TARGET)\n",
-    "man.image_barrier(render_target, vk.ImageUsage.ANY)\n",
     "man.clear_color(render_target, (0.0, 0.0, 0.4, 1.0))\n",
-    "man.image_barrier(render_target, vk.ImageUsage.RENDER_TARGET)\n",
-    "\n",
     "man.clear_depth_stencil(depth_buffer, 1.0, 0)\n",
     "man.set_pipeline(pipeline)\n",
     "man.set_framebuffer(framebuffer)\n",
@@ -263,11 +259,9 @@
    "outputs": [],
    "source": [
     "staging = vk.tensor(render_target.height, render_target.width, 4) \n",
-    "with vk.graphics_manager() as b:\n",
-    "    b.use(render_target, vk.ImageUsage.RENDER_TARGET)\n",
-    "    b.image_barrier(render_target, vk.ImageUsage.ANY)\n",
     "render_target.save(staging)\n",
     "\n",
+    "plt.figure(figsize=(4,4), dpi=200)\n",
     "plt.imshow(staging.cpu())\n",
     "plt.gca().axis('off')\n",
     "plt.tight_layout(pad=0.0)\n",
@@ -298,10 +292,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "with vk.graphics_manager() as b:\n",
-    "    b.use(render_target, vk.ImageUsage.ANY)\n",
-    "    b.image_barrier(render_target, vk.ImageUsage.RENDER_TARGET)\n",
-    "vk.submit(man)"
+    "vk.submit(man)\n",
+    "render_target.save(staging)"
    ],
    "metadata": {
     "collapsed": false
@@ -313,11 +305,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "with vk.graphics_manager() as b:\n",
-    "    b.use(render_target, vk.ImageUsage.RENDER_TARGET)\n",
-    "    b.image_barrier(render_target, vk.ImageUsage.ANY)\n",
-    "render_target.save(staging)\n",
-    "import matplotlib.pyplot as plt\n",
+    "plt.figure(figsize=(4,4), dpi=200)\n",
     "plt.imshow(staging.cpu())\n",
     "plt.gca().axis('off')\n",
     "plt.tight_layout(pad=0.0)\n",
@@ -328,20 +316,6 @@
     "collapsed": false
    },
    "id": "e79b9f13eb02971e"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "del staging\n",
-    "\n",
-    "vk.quit()"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "9fefd31050d1ef60"
   }
  ],
  "metadata": {
