--- a/e07_basic_raytracing.ipynb
+++ b/e07_basic_raytracing.ipynb
@@ -5,7 +5,7 @@
    "source": [
     "# Basic Raytracing\n",
     "\n",
-    "__raytracing pipeline, raytracing manager__\n"
+    "__raytracing pipeline, raytracing manager, build and update ADS__\n"
    ],
    "metadata": {
     "collapsed": false
@@ -20,7 +20,7 @@
     "import vulky as vk\n",
     "import numpy as np\n",
     "\n",
-    "vk.create_device(debug=True)\n",
+    "vk.create_device(debug=False)\n",
     "\n",
     "SCREEN_WIDTH = 512\n",
     "SCREEN_HEIGHT = 512\n",
@@ -34,7 +34,7 @@
     "    memory=vk.MemoryLocation.GPU\n",
     ")\n",
     "\n",
-    "data = vk.load_obj('./data/bunny.obj')\n",
+    "data = vk.load_obj('./vulky_data/bunny.obj')\n",
     "vertices_data, indices_data = vk.create_mesh(data, mode='po')"
    ],
    "metadata": {
@@ -70,7 +70,7 @@
     "for i in range(3):\n",
     "    instance_transforms[i] = vk.mat4x3.trs(vk.vec3(np.cos(i * 6.28 / 3), -0.2, np.sin(i * 6.28 / 3)), vk.vec3(0., 1., 0.0), i*3.14159/3, vk.vec3.one())\n",
     "    \n",
-    "instances = vk.instance_buffer(3)\n",
+    "instances = vk.instance_buffer(3, memory=vk.MemoryLocation.CPU)  # intentionally on the CPU for fast update\n",
     "with instances.map(mode='inout') as m:\n",
     "    m.transform = vk.mat4x3(instance_transforms).transposed()\n",
     "    m.accelerationStructureReference = geometry_ads.handle  # All geometries are the same\n",
@@ -97,8 +97,7 @@
     "        vk.LayoutAlignment.SCALAR,\n",
     "        Proj=vk.mat4,\n",
     "        View=vk.mat4\n",
-    "    ),\n",
-    "    memory=vk.MemoryLocation.GPU\n",
+    "    )\n",
     ")\n",
     "\n",
     "with global_transform as b:\n",
@@ -315,19 +314,36 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "video_data = vk.tensor(100, SCREEN_HEIGHT, SCREEN_WIDTH, 3)  # 100 frames\n",
-    "\n",
+    "video_data = vk.tensor(100, SCREEN_HEIGHT, SCREEN_WIDTH, 3)  # 100 frames"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2199b53a122535fc"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "for i in range(len(video_data)):\n",
     "    alpha = i / len(video_data)\n",
     "    look_at = vk.vec3(np.cos(alpha * 7), np.sin(alpha)*0.1 + 0.2, np.sin(alpha * 7))*(5 + np.sin(alpha))\n",
     "    # we dont need to map because is permanently mapped and update is always CPU -> GPU\n",
     "    with global_transform as b:\n",
     "        b.View = vk.mat4.look_at(look_at, vk.vec3(0., 0., 0.), vk.vec3(0.,1., 0.))\n",
+    "    # update instance transforms for the top-level    \n",
+    "    for j in range(3):\n",
+    "        instance_transforms[j] = vk.mat4x3.trs(vk.vec3(np.cos(j * 6.28 / 3), -0.2, np.sin(j * \n",
+    "          6.28 / 3)), vk.vec3(0., 1., 0.0), j*3.14159/3 + alpha * 6.28 * 2, vk.vec3.one())\n",
+    "    # the scene ads is bound to this instance buffer already\n",
+    "    with instances.map(mode='inout') as m:\n",
+    "        m.transform = vk.mat4x3(instance_transforms).transposed()\n",
+    "    with vk.raytracing_manager() as b:\n",
+    "        b.update_ads(scene_ads, scratch_buffer)  # update top-level ads every frame\n",
     "    vk.submit(man)\n",
     "    render_target.save(staging)\n",
-    "    video_data[i] = staging[...,:3] ** (1.0/2.2)  # copy current frame to video (only RGB)\n",
-    "    \n",
-    "vk.save_video(video_data, 'teaser7.webp', 10)"
+    "    video_data[i] = staging[...,:3] ** (1.0/2.2)  # copy current frame to video (only RGB)   "
    ],
    "metadata": {
     "collapsed": false
@@ -339,6 +355,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "vk.save_video(video_data, 'teaser7.webp', 10, quality=100)\n",
     "import moviepy.editor\n",
     "moviepy.editor.ipython_display(\"teaser7.webp\", filetype='image')"
    ],
