--- a/e08_shadow_cast.ipynb
+++ b/e08_shadow_cast.ipynb
@@ -18,11 +18,12 @@
    "outputs": [],
    "source": [
     "import vulky as vk\n",
+    "import numpy as np\n",
     "\n",
     "vk.create_device(debug=True)\n",
     "\n",
-    "SCREEN_WIDTH = 2048\n",
-    "SCREEN_HEIGHT = 2048\n",
+    "SCREEN_WIDTH = 512\n",
+    "SCREEN_HEIGHT = 512\n",
     "\n",
     "render_target = vk.image_2D(\n",
     "    image_format=vk.Format.VEC4,\n",
@@ -33,7 +34,7 @@
     "    memory=vk.MemoryLocation.GPU\n",
     ")\n",
     "\n",
-    "data = vk.load_obj('./data/bunny.obj')\n",
+    "data = vk.load_obj('./vulky_data/bunny.obj')\n",
     "vertices_data, indices_data = vk.create_mesh(data, mode='po')\n",
     "\n",
     "triangles_vb = vk.structured_buffer(\n",
@@ -55,9 +56,15 @@
     "triangles.append(triangles_vb, triangles_ib)\n",
     "geometry_ads = vk.ads_model(triangles)\n",
     "\n",
-    "instances = vk.instance_buffer(1)\n",
+    "instance_transforms = vk.tensor(3, 4, 3)\n",
+    "for i in range(3):\n",
+    "    instance_transforms[i] = vk.mat4x3.trs(vk.vec3(np.cos(i * 6.28 / 3), -0.2, np.sin(i * 6.28 / 3)), vk.vec3(0., 1., 0.0), i*3.14159/3, vk.vec3.one())\n",
+    " \n",
+    "instances = vk.instance_buffer(3)\n",
     "with instances.map(mode='inout') as m:\n",
-    "    m.accelerationStructureReference[0] = geometry_ads.handle\n",
+    "    m.accelerationStructureReference = geometry_ads.handle\n",
+    "    m.transform = vk.mat4x3(instance_transforms).transposed()\n",
+    "    \n",
     "scene_ads = vk.ads_scene(instances)    \n",
     "\n",
     "scratch_buffer = vk.scratch_buffer(geometry_ads, scene_ads)\n",
@@ -70,14 +77,15 @@
     "    vk.Layout.from_structure(\n",
     "        vk.LayoutAlignment.SCALAR,\n",
     "        Proj=vk.mat4,\n",
-    "        View=vk.mat4\n",
-    "    ),\n",
-    "    memory=vk.MemoryLocation.GPU\n",
+    "        View=vk.mat4,\n",
+    "        LightPos=vk.vec3\n",
+    "    )\n",
     ")\n",
     "\n",
     "with global_transform as b:\n",
     "    b.Proj = vk.mat4.perspective()\n",
-    "    b.View = vk.mat4.look_at(vk.vec3(0., 1., 4.), vk.vec3(0., 0.5, 0.), vk.vec3(0.,1., 0.))"
+    "    b.View = vk.mat4.look_at(vk.vec3(0., 1., 4.), vk.vec3(0., 0.5, 0.), vk.vec3(0.,1., 0.))\n",
+    "    b.LightPos = vk.vec3(1, 5, 2)"
    ],
    "metadata": {
     "collapsed": false
@@ -97,6 +105,7 @@
     "layout(set = 0, binding = 1) uniform Globals {\n",
     "    mat4 proj;\n",
     "    mat4 view;\n",
+    "    vec3 light_dir;\n",
     "} globals;\n",
     "layout(set = 0, binding = 2, rgba32f) uniform image2D ResultImage;\n",
     "\n",
@@ -121,6 +130,11 @@
     "#extension GL_EXT_scalar_block_layout : require\n",
     "\n",
     "layout(set = 0, binding = 0) uniform accelerationStructureEXT Scene;\n",
+    "layout(set = 0, binding = 1) uniform Globals {\n",
+    "    mat4 proj;\n",
+    "    mat4 view;\n",
+    "    vec3 light_pos;\n",
+    "} globals;\n",
     "\n",
     "layout(location = 0) rayPayloadInEXT vec4 ResultColor;\n",
     "layout(location = 1) rayPayloadInEXT float shadowCast;\n",
@@ -148,10 +162,13 @@
     "    Vertex v2 = vertices.data[indices.data[triangleIndex*3 + 2]];\n",
     "    vec3 coord = vec3(1 - HitAttribs.x - HitAttribs.y, HitAttribs.x, HitAttribs.y);\n",
     "    vec3 P = v0.P * coord.x + v1.P * coord.y + v2.P * coord.z;\n",
+    "    P = gl_ObjectToWorldEXT * vec4(P, 1);\n",
     "    vec3 N =  normalize(v0.N * coord.x + v1.N * coord.y + v2.N * coord.z);\n",
-    "    //ResultColor = vec4(N.x, N.y, N.z, 1);\n",
-    "    vec3 L = normalize(vec3(2,5,1));\n",
-    "    traceRayEXT(Scene, \n",
+    "    N = gl_ObjectToWorldEXT * vec4(N, 0);\n",
+    "    vec3 Lp = globals.light_pos;\n",
+    "    float d = length(Lp - P);\n",
+    "    vec3 L = (Lp - P)/d;\n",
+    "    traceRayEXT(Scene,  // Cast shadows\n",
     "        gl_RayFlagsTerminateOnFirstHitEXT, // cause any cast shadows \n",
     "        0xFF, \n",
     "        1,  // st offset\n",
@@ -163,7 +180,9 @@
     "        1000.0f, \n",
     "        1);\n",
     "    vec3 V = -gl_WorldRayDirectionEXT;\n",
-    "    vec3 light = vec3(3,3,0.3)/3.14159*max(0, max(0.1 * dot(N, V), shadowCast * dot(N, L)));\n",
+    "    vec3 light_intensity = vec3(100);\n",
+    "    vec3 albedo = vec3(1, 1, 0);\n",
+    "        vec3 light = shadowCast * light_intensity * albedo / 3.14159 * max(0, dot(N, L)) / (0.5 + d*d);\n",
     "    ResultColor = vec4(light.x, light.y, light.z, 1);\n",
     "}\n",
     "\"\"\"\n",
@@ -291,10 +310,12 @@
     "    vertices = triangles_vb,\n",
     "    indices = triangles_ib\n",
     ")\n",
-    "with vk.raytracing_manager() as man:\n",
-    "    man.set_pipeline(pipeline)\n",
-    "    man.bind(global_bindings[0])\n",
-    "    man.dispatch_rays(rt_program, SCREEN_WIDTH, SCREEN_HEIGHT)"
+    "man = vk.raytracing_manager()\n",
+    "man.set_pipeline(pipeline)\n",
+    "man.bind(global_bindings[0])\n",
+    "man.dispatch_rays(rt_program, SCREEN_WIDTH, SCREEN_HEIGHT)\n",
+    "man.freeze()\n",
+    "vk.submit(man)"
    ],
    "metadata": {
     "collapsed": false
@@ -318,6 +339,62 @@
     "collapsed": false
    },
    "id": "4b5bd3575c09c000"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Let's do the video!"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "63cfd818183d06cd"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "video_data = vk.tensor(100, SCREEN_HEIGHT, SCREEN_WIDTH, 3)  # 100 frames"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "588c0a145383b4c3"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "for i in range(len(video_data)):\n",
+    "    alpha = i / len(video_data)\n",
+    "    light_pos = vk.vec3(np.cos(alpha * 7), np.sin(alpha) + 4., np.sin(alpha * 7))*(1 + np.sin(alpha)*0.2)\n",
+    "    # we dont need to map because is permanently mapped and update is always CPU -> GPU\n",
+    "    with global_transform as b:\n",
+    "        b.LightPos = light_pos\n",
+    "    vk.submit(man)\n",
+    "    render_target.save(staging)\n",
+    "    video_data[i] = staging[...,:3] ** (1.0/2.2)  # copy current frame to video (only RGB)  "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6e5b291c853c936d"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "vk.save_video(video_data, 'teaser8.webp', 10, quality=100)\n",
+    "import moviepy.editor\n",
+    "moviepy.editor.ipython_display(\"teaser8.webp\", filetype='image')"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d7a0f0d4c38bf6d0"
   }
  ],
  "metadata": {
