--- a/e09_basic_pathtracer.ipynb
+++ b/e09_basic_pathtracer.ipynb
@@ -36,7 +36,7 @@
     "    memory=vk.MemoryLocation.GPU\n",
     ")\n",
     "\n",
-    "data = vk.load_obj('./data/bunny.obj')\n",
+    "data = vk.load_obj('./vulky_data/bunny.obj')\n",
     "vertices_data, indices_data = vk.create_mesh(data, mode='po')\n",
     "\n",
     "triangles_vb = vk.structured_buffer(\n",
